# capsules-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md
.github/workflows/: conformance.yml
CLI/: README.md  package-lock.json  package.json
CLI/src/: format.mjs
CLI/src/commands/: agents.mjs  chain.mjs  program.mjs  vectors.mjs  verify.mjs
CLI/test/: smoke.mjs
cli/: README.md  package-lock.json  package.json
cli/src/: args.mjs  index.mjs
cli/src/commands/: extract.mjs  (+4 more)
cli/test/: smoke.mjs
demo-video/: DESIGN.md  index.html  script.md
demo-video/compositions/: scene-1-cold-open.html  scene-2-the-ask.html  scene-3-trust-install.html  scene-4-gemma-probes.html  scene-5-seal-transport.html  scene-6-clinician.html  scene-7-format-moat.html  scene-8-close.html
docs/integrations/: complianceq.md
examples/: README.md
examples/generic-react-render/: README.md  build.mjs  package-lock.json  package.json  verify.mjs
examples/generic-report/: README.md  build.mjs  package-lock.json  package.json  verify.mjs
examples/generic-table-graph/: README.md  build.mjs  package-lock.json  package.json  verify.mjs
examples/lib/: example-kit.mjs
examples/quickstart/: README.md  package-lock.json  package.json  quickstart.mjs
output/: conformance-report.json  conformance-report.md
sdk-js/: README.md  package-lock.json  package.json
sdk-js/src/: builder.js  canonical.js  crypto.js  index.d.ts  index.js  keys.js  manifest.js  reader.js  verifier.js  zip.js
sdk-js/test/: basic.test.js  dx.test.js  federation.test.js  jcs-numbers.test.js  pith.test.js  strictness.test.js
sdk-js/tools/: generate-malformed-fixtures.mjs  generate-signing-input-vector.mjs  generate-tamper-fixtures.mjs  rawzip.mjs
sdk-kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
sdk-kotlin/core/: build.gradle.kts
sdk-kotlin/llm/: build.gradle.kts
sdk-kotlin/skills/: build.gradle.kts
sdk-kotlin/ui/: build.gradle.kts
sdk-py/: .gitignore  README.md  pyproject.toml
sdk-py/src/capsule/: __init__.py  builder.py  canonical.py  chain.py  crypto.py  envelope.py  keys.py  manifest.py  pith.py  reader.py  verifier.py  zip_io.py
sdk-py/tests/: conftest.py  test_builder.py  test_canonical.py  test_chain.py  test_crypto.py  test_dx.py  test_envelope.py  test_manifest.py  test_parity_jssdk.py  test_pith.py  test_reader.py  test_spec_registry.py  test_verifier.py  test_zip_io.py
sdk-swift/: .gitignore  Package.swift  README.md
sdk/src/: builder.js  canonical.js  chain.js  envelope.js  manifest.js  pith.js  verifier.js
skills/capsule/: SKILL.md  skill.json
spec/: README.md  chain.md  envelope.md  federation.md  format.md  manifest.md  pith.md  trust.md
spec/profiles/: clerk.md
spec/vectors/: README.md  jcs-numbers.json  plain-basic.json  signing-input.json
tools/: check-generic-examples.mjs  check-spec-vectors.mjs  regen-capsule-skill.mjs  run-conformance.mjs
verifier-rust/: Cargo.toml  README.md
verifier-rust/crates/capsule-verify/: Cargo.toml
verifier-rust/crates/capsule-verify-cli/: Cargo.toml
verifier-rust/crates/capsule-verify-cli/src/: main.rs
verifier-rust/crates/capsule-verify/src/: chain.rs  crypto.rs  decrypt.rs  envelope.rs  jcs.rs  l3.rs  lib.rs  manifest.rs  schemas.rs  test_support.rs  verifier.rs  zip_reader.rs
verifier-rust/src/: lib.rs
verifier-rust/tests/: parity_against_js_sdk.rs  spec_registry.rs
(+70 files in other folders)
