[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capsule"
version = "0.6.0"
description = "Capsule v0.6 — portable signed AI-context container (Python reference SDK)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Virion AI" }]
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/capsule"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled separately for long hex constants

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
