[package]
name = "capsule-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capsule verifier library: crypto, hex, JCS, ZIP, and signature verification."

[dependencies]
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
zip = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
